Update Gabriel de Andrade Ribeiro Barcelos.ipynb

--- a/Gabriel de Andrade Ribeiro Barcelos.ipynb
+++ b/Gabriel de Andrade Ribeiro Barcelos.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = pymongo.MongoClient(\"mongodb+srv://dbEric:ericelias@cluster0.7gjtf.mongodb.net/dados?retryWrites=true&w=majority\")"
+    "client = pymongo.MongoClient(\"mongodb+srv://dbGabriel:GabrieldeAndrade@cluster0.7gjtf.mongodb.net/dados?retryWrites=true&w=majority\")"
    ]
   },
   {
