--- a/Gabriel de Andrade Ribeiro Barcelos.ipynb
+++ b/Gabriel de Andrade Ribeiro Barcelos.ipynb
@@ -54,8 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymongo[srv] in d:\\users\\eric.conde\\anaconda3\\lib\\site-packages (3.11.1)\n",
-      "Requirement already satisfied: dnspython<2.0.0,>=1.16.0; extra == \"srv\" in d:\\users\\eric.conde\\anaconda3\\lib\\site-packages (from pymongo[srv]) (1.16.0)\n"
+      "Requirement already satisfied: pymongo[srv] in d:\\users\\gabriel.andrade\\anaconda3\\lib\\site-packages (3.11.1)\n",
+      "Requirement already satisfied: dnspython<2.0.0,>=1.16.0; extra == \"srv\" in d:\\users\\gabriel.andrade\\anaconda3\\lib\\site-packages (from pymongo[srv]) (1.16.0)\n"
      ]
     }
    ],
